Projeto final atv 03-04-2025

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <div class="cabecalho"> Jornal da linha 3 
+        <div class="cabecalho"> Jornal da Linha 3 
             <img src="menu.png">
         </div>
         <div class="menu"> 
